--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="28dp"
                 android:backgroundTint="@color/dark"
+                android:onClick="log"
                 android:text="@string/btnLogin"
                 android:textColor="@color/white" />
 
