--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#424141</color>
-    <color name="bg">#9A3B3B</color>
-    <color name="light">#F2ECBE</color>
-    <color name="dark">#C08261</color>
+    <color name="bg">#3b6597</color>
+    <color name="light">#91c4ff</color>
+    <color name="dark">#14447b</color>
     <color name="mid">#E2C799</color>
     <color name="txtShadow">#858585</color>
 </resources>
