--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="20dp"
-                    android:text="@string/adminTv"
+                    android:text="@string/TVlogin"
                     android:textColor="@color/dark"
                     android:textSize="20dp"
                     android:textStyle="bold" />
