--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SupplierManagement">
+    tools:context=".OrderStatus">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
