--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg"
-    tools:context=".AddPurchase">
+    tools:context=".AddOrder">
 
 
     <androidx.cardview.widget.CardView
@@ -51,7 +51,7 @@
             </View>
 
             <TextView
-                android:id="@+id/tvSectionName"
+                android:id="@+id/tvSiteManagerId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -60,7 +60,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etSectionName"
+                android:id="@+id/etSiteMgrId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_staff_id"
@@ -69,7 +69,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/tvDirection"
+                android:id="@+id/tvOrderNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -78,7 +78,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etDirections"
+                android:id="@+id/etOrderNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_order_number"
@@ -87,7 +87,7 @@
                 android:textSize="10dp" />
 
             <TextView
-                android:id="@+id/TvSite"
+                android:id="@+id/tvSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -96,7 +96,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etDirections1"
+                android:id="@+id/etSiteName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_site_name"
@@ -105,7 +105,7 @@
                 android:textSize="10dp" />
 
             <TextView
-                android:id="@+id/TvItem"
+                android:id="@+id/tvItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -114,7 +114,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etDirections2"
+                android:id="@+id/etItemName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_item_name"
@@ -123,7 +123,7 @@
                 android:textSize="10dp" />
 
             <TextView
-                android:id="@+id/TvPrice"
+                android:id="@+id/tvPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -132,7 +132,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etDirections3"
+                android:id="@+id/etPriceOrder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_price"
@@ -148,7 +148,6 @@
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
                 android:backgroundTint="@color/dark"
-                android:onClick="addsecbtn"
                 android:text="@string/AddBtn"
                 android:textColor="@color/white" />
 
