--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -69,24 +69,6 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/tvOrderNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/TvOrderNumber"
-                android:textColor="@color/mid"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/etOrderNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/add_order_number"
-                android:inputType="textMultiLine"
-                android:textColor="@color/mid"
-                android:textSize="10dp" />
-
-            <TextView
                 android:id="@+id/tvSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -123,26 +105,26 @@
                 android:textSize="10dp" />
 
             <TextView
-                android:id="@+id/tvPrice"
+                android:id="@+id/tvQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/TvPrice"
+                android:text="@string/TvQty"
                 android:textColor="@color/mid"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etPriceOrder"
+                android:id="@+id/etQtyOrder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/add_price"
+                android:hint="@string/add_qty"
                 android:inputType="textMultiLine"
                 android:textColor="@color/mid"
                 android:textSize="10dp" />
 
 
             <Button
-                android:id="@+id/btnAddSection"
+                android:id="@+id/btnAddOrder"
                 android:layout_width="@dimen/btnWidth"
                 android:layout_height="@dimen/btnHeight"
                 android:layout_gravity="center"
