--- a/app/src/main/res/layout/activity_manage_order.xml
+++ b/app/src/main/res/layout/activity_manage_order.xml
@@ -57,7 +57,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSections"
+            android:id="@+id/rvOrders"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
