--- a/app/src/main/res/layout/activity_update_order.xml
+++ b/app/src/main/res/layout/activity_update_order.xml
@@ -69,24 +69,6 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/tvOrderNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/TvOrderNumber"
-                android:textColor="@color/mid"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/etOrderNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/add_order_number"
-                android:inputType="textMultiLine"
-                android:textColor="@color/mid"
-                android:textSize="10dp" />
-
-            <TextView
                 android:id="@+id/tvSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -127,7 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/TvPrice"
+                android:text="@string/TvQty"
                 android:textColor="@color/mid"
                 android:textStyle="bold" />
 
@@ -135,21 +117,30 @@
                 android:id="@+id/etPriceOrder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/add_price"
+                android:hint="@string/add_qty"
                 android:inputType="textMultiLine"
                 android:textColor="@color/mid"
                 android:textSize="10dp" />
 
 
             <Button
-                android:id="@+id/btnAddSection"
+                android:id="@+id/btnUpdateOrder"
                 android:layout_width="@dimen/btnWidth"
                 android:layout_height="@dimen/btnHeight"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
                 android:backgroundTint="@color/dark"
-                android:onClick="addsecbtn"
                 android:text="@string/UpdateBtn"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnDeleteOrder"
+                android:layout_width="@dimen/btnWidth"
+                android:layout_height="@dimen/btnHeight"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/red"
+                android:text="@string/DeleteBtn"
                 android:textColor="@color/white" />
 
         </LinearLayout>
