--- a/app/src/main/res/layout/activity_add_delivery.xml
+++ b/app/src/main/res/layout/activity_add_delivery.xml
@@ -59,7 +59,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etSiteMgrId"
+                android:id="@+id/etSite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_site_name"
@@ -77,7 +77,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etOrderNumber"
+                android:id="@+id/etAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_address"
@@ -95,7 +95,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etSiteName"
+                android:id="@+id/etDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_site_name"
@@ -113,7 +113,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etItemName"
+                android:id="@+id/etPhoneNo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_phone_number"
@@ -123,13 +123,12 @@
 
 
             <Button
-                android:id="@+id/btnAddSection"
+                android:id="@+id/btnAddDelivery"
                 android:layout_width="@dimen/btnWidth"
                 android:layout_height="@dimen/btnHeight"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
                 android:backgroundTint="@color/dark"
-                android:onClick="addsecbtn"
                 android:text="@string/AddBtn"
                 android:textColor="@color/white" />
 
