--- a/app/src/main/res/layout/item_order_status.xml
+++ b/app/src/main/res/layout/item_order_status.xml
@@ -22,10 +22,10 @@
 
 
             <TextView
-                android:id="@+id/tvSite"
+                android:id="@+id/tvItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/TvSite"
+                android:text="@string/TvItem"
                 android:textColor="@color/dark"
                 android:layout_marginStart="8dp"
                 android:textSize="20dp"
@@ -42,16 +42,28 @@
 
 
             <TextView
-                android:id="@+id/tvAdderess"
+                android:id="@+id/tvQty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/TvAddress"
+                android:text="@string/TvQty"
                 android:textColor="@color/black"
                 android:layout_marginStart="8dp"
                 android:textSize="15dp"
                 />
 
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/TvStatus"
+            android:textAlignment="textStart"
+            android:textColor="@color/teal_200"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
