--- a/app/src/main/res/layout/item_order_status.xml
+++ b/app/src/main/res/layout/item_order_status.xml
@@ -41,18 +41,41 @@
             android:orientation="horizontal">
 
 
+
+
             <TextView
-                android:id="@+id/tvQty"
+                android:id="@+id/tvSiteName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/TvQty"
+                android:text="@string/TvSite"
                 android:textColor="@color/black"
                 android:layout_marginStart="8dp"
                 android:textSize="15dp"
                 />
 
 
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvsitemgrID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/TvStaffId"
+            android:textColor="@color/black"
+            android:layout_marginStart="8dp"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/tvQty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/TvQty"
+            android:textColor="@color/black"
+            android:layout_marginStart="8dp"
+            android:textSize="15dp"
+            />
 
         <TextView
             android:id="@+id/tvStatus"
